2024-04-09  Charlie Zender  <zender@uci.edu>

	* NCO 5.2.4-alpha03 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.2.4-alpha03: Seminario';git push
	git tag -a 5.2.4-alpha03 -m 'all: --qnt; ncclimo: dbg';git push --tags

	* all: Add --qnt as synonym for --ppc, --quantize

	* ncclimo: Add DEBUG output for issue of Tony B.

	* NCO 5.2.4-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.2.4-alpha02: Goat Cheese Hamburguesa';git push
	git tag -a 5.2.4-alpha02 -m 'all: NCO client nco_qnt_mtd(); ncclimo: tm_bnds err dgn';git push --tags

	* all: convert all NSD/NSB regression tests to use new CF convention

	* all: write old (libnetcdf-emulating) attributes only for DSD (rounding) method, not for NSD/NSB (quantization) methods

2024-04-08  Charlie Zender  <zender@uci.edu>

	* all: verify CF quantization metadata works for libnco

	* all: Invoke nco_qnt_mtd() from nco_ppc_bitmask() so NCO client quantization records CF metadata

	* all: Pass output group and variable IDs to nco_ppc_bitmask()

2024-04-07  Charlie Zender  <zender@uci.edu>

	* ncclimo add sanity check to inferred value of tm_bnds. Print meaningful error and workaround then exit.

2024-04-06  Charlie Zender  <zender@uci.edu>

	* NCO 5.2.4-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.2.4-alpha01: Silken Rio';git push
	git tag -a 5.2.4-alpha01 -m 'Functionally identical to 5.2.3';git push --tags

	* ncclimo/ncremap: Deprecate --gres=craynetwork:0 since not available on Perlmutter, and keep --mem option

2024-04-03  Charlie Zender  <zender@uci.edu>

	* NCO 5.2.3 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.2.3: Cowboy Carter';git push
	git tag -a 5.2.3 -m 'all: mss_val wrn; ncclimo: rgn_avg fix elm, hrz_dmn, hrz_arg, area_wgt, ppn_opt; ncremap: upd doc';git push --tags

	* NCO 5.2.3-beta01 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.2.3-beta01: Stormy Saturday';git push