@@ -1202,7 +1202,7 @@ fi # !inp_aut !mdl_nm_usr
 # clm_flg and tms_flg and all input file pre-requisite parameters are now set. Ready to gather input filenames.
 
 # Obtain filenames from automatic generation, directory glob, positional arguments, or stdin pipe
-#printf "dbg: inp_aut  = ${inp_aut}, inp_glb  = ${inp_glb}, inp_psn  = ${inp_psn}, inp_std  = ${inp_std}\n"
+#printf "dbg: inp_aut = ${inp_aut}, inp_glb = ${inp_glb}, inp_psn = ${inp_psn}, inp_std = ${inp_std}\n"
 # End input mode determination block
 
 if [ "${clm_flg}" = 'Yes' ] && [ -z "${out_nm}" ] && [ -z "${fml_nm}" ]; then 
@@ -1464,6 +1464,16 @@ if [ ${inp_std} = 'Yes' ]; then
     done < /dev/stdin
 fi # !inp_std
 
+# Sanity check that input files were found
+if [ ${fl_nbr} -eq 0 ] || [ -z ${fl_in[0]} ]; then
+    printf "${spt_nm}: ERROR No input files were found: \$fl_nbr=${fl_nbr}, \${fl_in[0]}=\"${fl_in[0]}\". At least one input file is required. Please re-examine your input file specification.\n"
+    printf "The input method employed is the one whose value is \"Yes\": inp_aut = ${inp_aut}, inp_glb = ${inp_glb}, inp_psn = ${inp_psn}, inp_std = ${inp_std}.\n"
+    if [ ${inp_std} = 'Yes' ]; then
+	printf "${spt_nm}: HINT Expecting input from stdin. If you did not intend to provide input files on stdin, then perhaps ${spt_nm} a parent process (e.g., batch queue system or parent script) is controlling stdin. This can lead ${spt_nm} to expect input filenames on stdin. To prevent this from occurring, trying invoking with the --no_stdin switch, i.e., \'${spt_nm} --no_stdin ...\'.\n"
+    fi # inp_std
+    exit 1
+fi # !fl_nbr
+
 # Prepend drc_in to fl_in in MFOs (ncra, ncrcat)
 # 20240401 Also prepend drc_in to fl_in in SFOs (ncks, ncap2) used in hfc/hfs modes and in rgn_avg
 # Otherwise operators will fail to find input files when cwd != drc_in
@@ -1480,14 +1490,9 @@ if [ ${clm_md} = 'hfc' ] || [ ${clm_md} = 'hfs' ]; then
 	# User requested high-frequency mode and did not specify tpd so (try to) infer it
 	# Examine bounds of second timestep in case first timestep is instantaneous (e.g., restart values)
 	tm_var='time'
-	# 20240407 This step appears to cause failure experienced by Tony B. in https://acmeclimate.slack.com/archives/C02LCQ38YV8/p1712345304709289?thread_ts=1711642857.535499&cid=C02LCQ38YV8
-	# Hypothesis is that tm_bnds evaluates to empty string, then use of empty tm_bnds in following ncks command causes "-d" to be interpreted as variable name and  "time,0" to be interpreted as filename
-	# 20240408 Hypothesis confirmed. Following command results in ncks WARNING "nco_fl_lst_stdin() tried and failed to get input filename(s) from stdin"
-	echo "DEBUG: quark remove me"
-	echo "DEBUG: tm_var=${tm_var}, ppn_opt=${ppn_opt}, fl_in[0]=${fl_in[0]}"
 	tm_bnds=`ncks --trd -M -m -v ${tm_var} ${ppn_opt} ${fl_in[0]} | grep -E -i "^${tm_var} attribute [0-9]+: bounds" | cut -f 11- -d ' ' | sed 's/^ *//g'`
 	if [ -z "${tm_bnds}" ]; then
-	    printf "${spt_nm}: ERROR High-frequency mode needs but failed find bounds variable for record coordinate named \"${time}\". CF requires bounds variable to be specified as value of \"bounds\" attribute of coordinate. Typically record bounds variable is named \"time_bnds\" or \"time_bounds\".\nHINT: A workaround to this is to explicitly specify the number of timesteps-per-day in every input file with the --tpd option.\n"
+	    printf "${spt_nm}: ERROR High-frequency mode needs but failed to find bounds variable for record coordinate named \"${time}\" in input file \"${fl_in[0]}\". CF requires bounds variable to be specified as value of \"bounds\" attribute of coordinate. Typically record bounds variable is named \"time_bnds\" or \"time_bounds\".\nHINT: A workaround to this is to explicitly specify the number of timesteps-per-day in every input file with the --tpd option.\n"
 	    exit 1
 	fi # !tm_bnds
 	# 20201220: Using %g not %f in format results in tpd=10 not tpd=8 for 3-hourly EAM data!
@@ -2084,6 +2089,15 @@ date_srt=$(date +"%s")
 if [ ${dbg_lvl} -ge 0 ]; then
     printf "Climatology operations invoked with command:\n"
     echo "${cmd_ln}"
+fi # !dbg
+if [ ${dbg_lvl} -ge 2 ]; then
+    printf "************************************************************************\n"
+    printf "IMPORTANT: This output shows a SIMULATION of a production run\n"
+    printf "The values shown are real, but the printed commands are NOT executed\n"
+    printf "This output is for debugging purpose only since dbg_lvl = ${dbg_lvl} >= 2\n"
+    printf "The elapsed time should be near 0m0s since there is very little disk I/O\n"
+    printf "Set dbg_lvl <= 1 for a PRODUCTION RUN that executes these commands\n"
+    printf "************************************************************************\n"
 fi # !dbg
 if [ "${tms_flg}" = 'Yes' ]; then
     printf "Started climatology splitting at `date`\n"
